--- a/home.html
+++ b/home.html
@@ -88,7 +88,7 @@
                     <p onclick="window.location.href='join.html'">JOIN US</p>
                 </div>
                 <div class="lang_select">
-                    <p>EN</p>
+                    <p>中</p>
                     <img src="./images/drop-down.png" class="header_arrow drop_down">
                     <div id="lang" class="lang_box">
                         <ul class="lang">
@@ -98,7 +98,7 @@
                     </div>
                 </div>
                 <div class="github_icon">
-                    <img src="images/github_icon.png" onclick="window.location.href='https://github.com/'">
+                    <img src="images/github_icon.png" onclick="window.open('https://github.com/');">
                 </div>
             </div>
         </div>
@@ -145,7 +145,7 @@
                 <img src="images/logo_Dark.png">
             </div>
             <div class="footer_icon">
-                <img src="images/icon5.png" onclick="window.location.href='https://github.com/'">
+                <img src="images/icon5.png" onclick="window.open('https://github.com/');">
             </div>
         </div>
     </div>
