--- a/en/home.html
+++ b/en/home.html
@@ -85,13 +85,13 @@
             </div>
             <div class="header_right">
                 <div class="div_hover">
-                    <p onclick="window.location.href='../docs.html'">DOCS</p>
+                    <p onclick="window.location.href='docs.html'">DOCS</p>
                 </div>
                 <div class="div_hover">
-                    <p onclick="window.location.href='../join.html'">JOIN US</p>
+                    <p onclick="window.location.href='join.html'">JOIN US</p>
                 </div>
                 <div class="lang_select">
-                    <p>中</p>
+                    <p>EN</p>
                     <img src="../images/drop-down.png" class="header_arrow drop_down">
                     <div id="lang" class="lang_box">
                         <ul class="lang">
@@ -101,7 +101,7 @@
                     </div>
                 </div>
                 <div class="github_icon">
-                    <img src="../images/github_icon.png" onclick="window.location.href='https://github.com/'">
+                    <img src="../images/github_icon.png" onclick="window.open('https://github.com/');">
                 </div>
             </div>
         </div>
@@ -148,7 +148,7 @@
                 <img src="../images/logo_Dark.png">
             </div>
             <div class="footer_icon">
-                <img src="../images/icon5.png" onclick="window.location.href='https://github.com/'">
+                <img src="../images/icon5.png" onclick="window.open('https://github.com/');">
             </div>
         </div>
     </div>
