--- a/en/join.html
+++ b/en/join.html
@@ -5,10 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DatenLord</title>
-    <link rel="icon" href="./images/favicon.ico" type="image/x-icon"/>
-    <link type="text/css" rel="styleSheet"  href="./css/index.css" />
-    <link type="text/css" rel="styleSheet"  href="./css/reset.css" />
-    <link type="text/css" rel="styleSheet"  href="./css/main.css" />
+    <link rel="icon" href="../images/favicon.ico" type="image/x-icon"/>
+    <link type="text/css" rel="styleSheet"  href="../css/index.css" />
+    <link type="text/css" rel="styleSheet"  href="../css/reset.css" />
+    <link type="text/css" rel="styleSheet"  href="../css/main.css" />
     <style>
 
         .content {
@@ -75,7 +75,7 @@
         }
 
         .home_banner {
-            background: url(./images/banner.png) 100% no-repeat;
+            background: url(../images/banner.png) 100% no-repeat;
             height: 400px;
             background-size: 100% 100%;
         }
@@ -91,8 +91,8 @@
     <div class="header_box">
         <div class="header">
             <div class="header_left">
-                <img src="images/daztenLord.png"  onclick="window.location.href='home.html'" class="datenLord">
-                <img src="images/datenLord_logo.png"  onclick="window.location.href='home.html'" class="datenLord_logo">
+                <img src="../images/daztenLord.png"  onclick="window.location.href='home.html'" class="datenLord">
+                <img src="../images/datenLord_logo.png"  onclick="window.location.href='home.html'" class="datenLord_logo">
             </div>
             <div class="header_right">
                 <div class="div_hover">
@@ -102,17 +102,17 @@
                     <p onclick="window.location.href='join.html'">JOIN US</p>
                 </div>
                 <div class="lang_select">
-                    <p>中</p>
-                    <img src="./images/drop-down.png" class="header_arrow drop_down">
+                    <p>EN</p>
+                    <img src="../images/drop-down.png" class="header_arrow drop_down">
                     <div id="lang" class="lang_box">
                         <ul class="lang">
-                            <li>中</li>
-                            <li onclick="window.location.href='./en/join.html'">EN</li>
+                            <li onclick="window.location.href='../join.html'">中</li>
+                            <li>EN</li>
                         </ul>
                     </div>
                 </div>
                 <div class="github_icon">
-                    <img src="images/github_icon.png" onclick="window.open('https://github.com/');">
+                    <img src="../images/github_icon.png" onclick="window.open('https://github.com/');">
                 </div>
             </div>
         </div>
@@ -157,7 +157,7 @@
                         </div>
                     </div>
                     <div class="recruit_Con_img">
-                        <img src="images/join1.png">
+                        <img src="../images/join1.png">
                     </div>
                 </div>
             </div>
@@ -198,7 +198,7 @@
                         </div>
                     </div>
                     <div class="recruit_Con_img">
-                        <img src="images/join2.png">
+                        <img src="../images/join2.png">
                     </div>
                 </div>
             </div>
@@ -207,10 +207,10 @@
     <div class="footer_box">
         <div class="footer">
             <div class="footer_img">
-                <img src="images/logo_Dark.png">
+                <img src="../images/logo_Dark.png">
             </div>
             <div class="footer_icon">
-                <img src="images/icon5.png" onclick="window.open('https://github.com/');">
+                <img src="../images/icon5.png" onclick="window.open('https://github.com/');">
             </div>
         </div>
     </div>
@@ -223,19 +223,19 @@
             <p>您正在使用旧版本浏览器。请升级浏览器以获得更好的体验。</p>
             <div style="display: inline-block; text-align: center;">
                 <div style="display: inline-block;margin: 20px 0 10px 0">
-                    <img src="images/chrome.png" style="width: 100px; height: 100px; margin: 10px;">
+                    <img src="../images/chrome.png" style="width: 100px; height: 100px; margin: 10px;">
                     <p>Chrome</p>
                 </div>
                 <div style="display: inline-block;margin: 20px 0 10px 0">
-                    <img src="images/firefox.png" style="width: 100px; height: 100px; margin: 10px;">
+                    <img src="../images/firefox.png" style="width: 100px; height: 100px; margin: 10px;">
                     <p>Firefox</p>
                 </div>
                 <div style="display: inline-block;margin: 20px 0 10px 0">
-                    <img src="images/safari.png" style="width: 100px; height: 100px; margin: 10px;">
+                    <img src="../images/safari.png" style="width: 100px; height: 100px; margin: 10px;">
                     <p>Safari</p>
                 </div>
                 <div style="display: inline-block;margin: 20px 0 10px 0">
-                    <img src="images/edge.png" style="width: 100px; height: 100px; margin: 10px;">
+                    <img src="../images/edge.png" style="width: 100px; height: 100px; margin: 10px;">
                     <p>Edge</p>
                 </div>
             </div>
@@ -243,7 +243,7 @@
 
     </div>
 </div>
-<script type="text/javascript" src="./js/main.js"></script>
+<script type="text/javascript" src="../js/main.js"></script>
 <script>isIE();</script>
 </body>
 </html>
